--- a/udemy/todo/src/components/add-Item/add-item.css
+++ b/udemy/todo/src/components/add-Item/add-item.css
@@ -1,4 +1,7 @@
-.item-add {
-  margin: 10px; }
+.item-add-form {
+  margin-top: 10px; }
+
+.item-add-form input {
+  margin-right: 3px; }
 
 /*# sourceMappingURL=add-item.css.map */
