--- a/udemy/starDB/src/components/person-details/item-details.css
+++ b/udemy/starDB/src/components/person-details/item-details.css
@@ -15,4 +15,4 @@
 .person-details .list-group-item .term {
   margin-right: 0.5rem; }
 
-/*# sourceMappingURL=person-details.css.map */
+/*# sourceMappingURL=item-details.cssap */
